# orx-split-vec

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: append.rs  grow.rs  par_collect_map_filter.rs  par_collect_map_filter_owned.rs  par_collect_map_filter_ref.rs  random_access.rs  serial_access.rs
benches/results/: grow.csv  grow.xlsx
examples/: bench_parallelization.rs  demo_parallelization.rs  parallelization.rs
examples/bench_parallelization/: Cargo.toml
examples/bench_parallelization/src/: main.rs
examples/demo_parallelization/: Cargo.toml
examples/demo_parallelization/src/: main.rs
src/: concurrent_pinned_vec.rs  default.rs  eq.rs  from.rs  growth.rs  idx.rs  index.rs  into_concurrent_pinned_vec.rs  lib.rs  pinned_vec.rs  prelude.rs  range_helpers.rs  resize_multiple.rs  resize_unit.rs  slice.rs  split_vec.rs  split_vec_struct.rs  vec.rs
src/algorithms/: binary_search.rs  in_place_sort.rs  mod.rs
src/algorithms/tests/: binary_search.rs  in_place_sort.rs  mod.rs
src/common_traits/: clone.rs  debug.rs  eq.rs  index.rs  mod.rs
src/common_traits/con_iter_split_vec/: chunk_puller.rs  con_iter.rs  into_con_iter.rs
src/common_traits/concurrent_iter/con_iter_ref/: chunk_puller.rs  con_iter.rs
src/common_traits/concurrent_iterator/: con_iter_split_vec.rs  mod.rs
src/common_traits/iter/: eq.rs  iterator.rs  mod.rs
src/common_traits/iterator/: eq.rs  flattened_iter_of_slices.rs  from_iter.rs  into_iter.rs  iter.rs  iter_con.rs  iter_fragment.rs  iter_mut.rs  iter_mut_rev.rs  iter_mut_slices.rs  iter_of_slices.rs  iter_of_slices_of_con.rs  iter_ptr.rs  iter_ptr_bwd.rs  iter_rev.rs  iter_slices.rs  iter_slices_of_con.rs  mod.rs  reductions.rs
src/common_traits/iterator/concurrent_iterators/: con_iter_ref.rs  mod.rs
src/common_traits/iterator/tests/: flattened_iter_of_slices.rs  into_iter.rs  iter.rs  iter_mut.rs  iter_mut_rev.rs  iter_rev.rs  iter_slices.rs  iter_slices_mut.rs  iter_slices_of_con.rs  mod.rs
src/concurrent_iter/: con_iter_owned.rs  con_iter_ref.rs  growths_as_jagged_indexer.rs  mod.rs
src/concurrent_iter/con_iter_owned/: mod.rs  seq_chunks_iter_vec.rs  slices_into_seq_iter.rs  vec_into_seq_iter.rs
src/concurrent_iter/con_iter_owned/tests/: vec_into_seq_iter.rs
src/concurrent_iter/con_iter_owned_zzz/: con_iter.rs  seq_chunks_iter_vec.rs  vec_into_seq_iter.rs
src/concurrent_iter/con_iter_ref/: con_iter.rs  into_con_iter.rs
src/concurrent_iter/con_iter_ref_zzz/: chunk_puller.rs  con_iter.rs  mod.rs
src/concurrent_iter/tests/: con_iter_over_refs.rs  into.rs  mod.rs  par.rs  transformations.rs
src/concurrent_iter/tests/con_iter_owned/: con_iter.rs  into.rs  mod.rs  par.rs  transformations.rs
src/concurrent_iter/tests/con_iter_ref/: con_iter.rs  into.rs  mod.rs  par.rs  transformations.rs
src/concurrent_pinned_vec/: con_pinvec.rs  into_iter.rs  into_iter_ptr_slices.rs  iter_ptr.rs  iter_ptr_slices.rs  mod.rs
src/concurrent_pinned_vec/tests/: into_iter.rs  iter_ptr.rs  mod.rs
src/fragment/: as_ref.rs  clone.rs  debug.rs  deref.rs  eq.rs  fragment_struct.rs  from.rs  into_fragments.rs  mod.rs  raw_fragment.rs  transformations.rs
src/growth/: any.rs  custom.rs  doubling.rs  exponential.rs  fixed.rs  growth_trait.rs  linear.rs  mod.rs  par_growth.rs
src/growth/doubling/: constants.rs  doubling_growth.rs  from.rs  impl_growth.rs  mod.rs
src/growth/doubling/tests/: from.rs  growth.rs
src/growth/linear/: constants.rs  from.rs  impl_growth.rs  linear_growth.rs  mod.rs
src/growth/linear/tests/: from.rs  growth.rs  mod.rs
src/growth/recursive/: append.rs  from.rs  mod.rs  recursive_growth.rs
src/growth/recursive/tests/: append.rs  from.rs  growth.rs  mod.rs
src/iter/: eq.rs  into_iter.rs  iterator.rs  mod.rs
src/new_split_vec/: default.rs  from.rs  into.rs  mod.rs  new.rs
src/pointers/: mod.rs  ptr.rs  ptr_backward.rs  ptrs.rs
src/test/: macros.rs
tests/: con_iter_over_range.rs  con_iter_trait_bounds.rs  con_pinned_vec.rs  con_pinned_vec_grow.rs  first_last.rs  grow_and_initialize.rs  growth_constant_access.rs  growth_with_ptr_width_32.rs  growth_with_wasm32.rs  pinned_on_move.rs  slices.rs  slices_mut.rs  sort.rs
(+2 files in other folders)
