[package]
name = "orx-split-vec"
version = "3.17.0"
edition = "2024"
authors = ["orxfun <orx.ugur.arikan@gmail.com>"]
description = "An efficient dynamic capacity vector with pinned element guarantees."
license = "MIT OR Apache-2.0"
repository = "https://github.com/orxfun/orx-split-vec/"
keywords = ["vec", "array", "split", "fragments", "pinned"]
categories = ["data-structures", "rust-patterns", "no-std"]

[dependencies]
orx-iterable = { version = "1.3.0", default-features = false }
orx-pseudo-default = { version = "2.1.0", default-features = false }
orx-pinned-vec = { version = "3.16.0", default-features = false }
orx-concurrent-iter = { version = "2.1.0", default-features = false }

[[bench]]
name = "par_collect_map_filter_ref"
harness = false

[dev-dependencies]
clap = { version = "4.5.38", features = ["derive"] }
criterion = "0.6.0"
rand = { version = "0.9", default-features = false }
rand_chacha = { version = "0.9", default-features = false }
test-case = "3.3.1"
orx-concurrent-bag = "2.12.0"
orx-parallel = { version = "2.0.1", default-features = false }
rayon = { version = "1.10.0", default-features = false }
