[package]
name = "orx-split-vec"
version = "3.21.0"
edition = "2024"
authors = ["orxfun <orx.ugur.arikan@gmail.com>"]
description = "An efficient dynamic capacity vector with pinned element guarantees."
license = "MIT OR Apache-2.0"
repository = "https://github.com/orxfun/orx-split-vec/"
keywords = ["vec", "array", "split", "fragments", "pinned"]
categories = ["data-structures", "rust-patterns", "no-std"]

[dependencies]
orx-iterable = { version = "1.3.0", default-features = false }
orx-pseudo-default = { version = "2.1.0", default-features = false }
orx-pinned-vec = { version = "3.19.0", default-features = false }
orx-concurrent-iter = { version = "3.1.0", default-features = false }

[[bench]]
name = "serial_access"
harness = false

[dev-dependencies]
criterion = "0.7.0"
rand = { version = "0.9.2", default-features = false }
rand_chacha = { version = "0.9", default-features = false }
test-case = "3.3.1"
orx-concurrent-bag = "3.1.0"
