[package]
name = "bench_parallelization"
version = "0.1.0"
edition = "2024"
publish = ["artifactory"]

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
rayon = { version = "1.11.0", default-features = false }
orx-split-vec = { path = "../../../orx-split-vec" }
orx-parallel = { version = "3.2.0", default-features = false }
